# megastore_search

./: .gitignore  Cargo.toml  README.md
src/: catalog.rs  lib.rs  main.rs  product.rs
tests/: integration_tests.rs
